# dicomsort

./: .gitignore  README.md  dicomsort  dicomsort.py  pyproject.toml  requirements.txt
docs/: index.rst
